--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
           <div class="carousel-window">
             <!-- 각 상품 카드는 링크 전체를 클릭 가능하게 -->
-            <a href="https://www.naver.com"
+            <a href="https://blog.naver.com/yc20508/224099159989"
                target="_blank"
                class="product-card active"
                data-index="0">
@@ -69,11 +69,11 @@
                 썸네일1
               </div>
               <div class="product-info">
-                <h3 class="product-title">[예시] 갤럭시 폴더블7 리뷰&혜택 안내</h3>
+                <h3 class="product-title">[굿바이 2025] 연말 행사 이벤트</h3>
               </div>
             </a>
 
-            <a href="https://www.naver.com"
+            <a href="https://blog.naver.com/yc20508/224086303332"
                target="_blank"
                class="product-card"
                data-index="1">
@@ -81,11 +81,11 @@
                 썸네일2
               </div>
               <div class="product-info">
-                <h3 class="product-title">[예시] 아이폰17 시리즈 최저가 개통 팁</h3>
+                <h3 class="product-title">[점프4 0원!!] 키즈&실버 전용폰, 무료로 개통하자!</h3>
               </div>
             </a>
 
-            <a href="https://www.naver.com"
+            <a href="https://blog.naver.com/yc20508/224079732122"
                target="_blank"
                class="product-card"
                data-index="2">
@@ -93,7 +93,7 @@
                 썸네일3
               </div>
               <div class="product-info">
-                <h3 class="product-title">[예시] 인터넷·TV 결합 시 절약 금액 정리</h3>
+                <h3 class="product-title">[매장홍보] 왜 KT플라자 유성점이 좋을까요?</h3>
               </div>
             </a>
           </div>
@@ -118,7 +118,7 @@
           유성직영점을 책임지는 점장님의 프로필입니다.
         </p>
 
-        <a href="https://www.naver.com"
+        <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/6484616?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
            target="_blank"
            class="staff-card large-card">
           <div class="staff-avatar">
@@ -129,8 +129,8 @@
             <h3 class="staff-name">김수현 점장</h3>
             <p class="staff-role">유성직영점 점장</p>
             <p class="staff-desc">
-              고객 상황에 딱 맞는 요금제와 혜택을 찾아드리는
-              맞춤형 컨설턴트입니다.
+              A to Z! 모든 제품을 잘 아는
+              우리 회사 대표 컨설턴트입니다.
             </p>
             <span class="staff-link-text">자세한 프로필 보기 →</span>
           </div>
@@ -145,14 +145,14 @@
         </p>
 
 
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/6484577?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="staff-card large-card">
             <div class="staff-avatar">
               <div class="avatar-circle">김</div>
             </div>
             <div class="staff-info">
-              <h3 class="staff-name">김승원 매니저</h3>
+              <h3 class="staff-name">김승원 부점장</h3>
               <p class="staff-desc">
                 휴대폰·인터넷 결합으로 통신비 절감 솔루션을 제안합니다.
               </p>
@@ -160,7 +160,7 @@
             </div>
           </a>
 
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/6484624?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="staff-card large-card">
             <div class="staff-avatar">
@@ -175,7 +175,7 @@
             </div>
           </a>
 
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/7178693?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="staff-card large-card">
             <div class="staff-avatar">
@@ -184,13 +184,14 @@
             <div class="staff-info">
               <h3 class="staff-name">이병훈 매니저</h3>
               <p class="staff-desc">
-                기기 변경, 데이터 이전까지 한 번에 돕는 실속 전문가입니다.
+                [찾아가는 영업]
+                어디에 계시든, 빠르게 찾아갑니다!
               </p>
               <span class="staff-link-text">프로필 보기</span>
             </div>
           </a>
 
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/7168461?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="staff-card large-card">
             <div class="staff-avatar">
@@ -205,7 +206,7 @@
             </div>
           </a>
 
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/7168461?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="staff-card large-card">
             <div class="staff-avatar">
@@ -233,7 +234,7 @@
         </p>
 
         <div class="reserve-grid">
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/6484616?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="reserve-card">
             <h3 class="reserve-name">김수현 점장</h3>
@@ -241,7 +242,7 @@
             <span class="reserve-link">네이버 예약 바로가기 →</span>
           </a>
 
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/6484577?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="reserve-card">
             <h3 class="reserve-name">김승원 매니저</h3>
@@ -249,31 +250,31 @@
             <span class="reserve-link">네이버 예약 바로가기 →</span>
           </a>
 
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/6484624?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="reserve-card">
             <h3 class="reserve-name">윤기석 매니저</h3>
-            <p class="reserve-desc">요금제/혜택 비교 상담</p>
+            <p class="reserve-desc">>우리 매장 갤럭시 전문가!</p>
             <span class="reserve-link">네이버 예약 바로가기 →</span>
           </a>
 
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/7178693?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="reserve-card">
             <h3 class="reserve-name">이병훈 매니저</h3>
-            <p class="reserve-desc">기기 변경/데이터 이전</p>
+            <p class="reserve-desc">찾아가는 영업</p>
             <span class="reserve-link">네이버 예약 바로가기 →</span>
           </a>
 
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/7168461?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="reserve-card">
             <h3 class="reserve-name">이호준 매니저</h3>
-            <p class="reserve-desc">인터넷·TV 설치/이전</p>
+            <p class="reserve-desc">유선상품, 아이폰 전문가</p>
             <span class="reserve-link">네이버 예약 바로가기 →</span>
           </a>
 
-          <a href="https://www.naver.com"
+          <a href="https://m.booking.naver.com/booking/5/bizes/957817/items/7168461?area=pll&entry=pll&isProgramBizItem=false&lang=ko&startDateTime=2025-12-09T00%3A00%3A00%2B09%3A00&theme=place"
              target="_blank"
              class="reserve-card">
             <h3 class="reserve-name">임다은 매니저</h3>
@@ -289,8 +290,8 @@
         <p class="section-subtitle">
           간단 문의는 전화로 바로 확인해 주세요.
         </p>
-        <a href="tel:01093880429" class="btn primary-btn wide">
-          010-9388-0429 로 전화하기
+        <a href="tel:0428252780" class="btn primary-btn wide">
+          042-825-2780 전화하기
         </a>
       </section>
 
@@ -300,7 +301,7 @@
         <p class="section-subtitle">
           실시간 후기와 자세한 이벤트 안내는 블로그에서 확인하실 수 있어요.
         </p>
-        <a href="https://www.naver.com"
+        <a href="https://blog.naver.com/yc20508"
            target="_blank"
            class="btn secondary-btn wide">
           매장 블로그 바로가기
@@ -313,7 +314,7 @@
         <p class="section-subtitle">
           단골 등록해 두시면 신규 혜택과 이벤트 소식을 가장 먼저 받아보실 수 있습니다.
         </p>
-        <a href="https://www.naver.com"
+        <a href="https://su.kt.co.kr/SlRDJIC"
            target="_blank"
            class="btn accent-btn wide">
           단골 등록하러 가기
