--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                class="product-card"
                data-index="2">
               <div class="product-thumbnail"
-                   style="background-image: url('유성성.png');">
+                   style="background-image: url('유성.png');">
               </div>
               <div class="product-info">
                 <h3 class="product-title">[매장홍보]<br>왜 KT플라자 유성점이 좋을까요?</h3>
