--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
            class="staff-card large-card">
           <div class="staff-avatar">
             <!-- 실제 사진 파일로 교체: 예) img/kim-suhyun.jpg -->
-            <img src="img_kimsuhyun.png" class="profile-photo" alt="김수현 점장">
+            <img src="김수현점장님.jpg" class="profile-photo" alt="김수현 점장">
           </div>
           <div class="staff-info">
             <h3 class="staff-name">김수현 점장</h3>
@@ -148,7 +148,7 @@
              target="_blank"
              class="staff-card large-card">
             <div class="staff-avatar">
-              <div class="avatar-circle">김</div>
+              <img src="김승원부점장님.jpg" class="profile-photo" alt="김승원 부점장">
             </div>
             <div class="staff-info">
               <h3 class="staff-name">김승원 부점장</h3>
@@ -163,7 +163,7 @@
              target="_blank"
              class="staff-card large-card">
             <div class="staff-avatar">
-              <div class="avatar-circle">윤</div>
+              <img src="윤기석대리님.jpg" class="profile-photo" alt="윤기석 대리리">
             </div>
             <div class="staff-info">
               <h3 class="staff-name">윤기석 매니저</h3>
@@ -178,7 +178,7 @@
              target="_blank"
              class="staff-card large-card">
             <div class="staff-avatar">
-              <div class="avatar-circle">이</div>
+              <img src="이병훈사원님.jpg" class="profile-photo" alt="이병훈 사원">
             </div>
             <div class="staff-info">
               <h3 class="staff-name">이병훈 매니저</h3>
@@ -193,7 +193,7 @@
              target="_blank"
              class="staff-card large-card">
             <div class="staff-avatar">
-              <div class="avatar-circle">이</div>
+              <img src="이호준사원님.jpg" class="profile-photo" alt="이호준 사원원">
             </div>
             <div class="staff-info">
               <h3 class="staff-name">이호준 매니저</h3>
@@ -208,7 +208,7 @@
              target="_blank"
              class="staff-card large-card">
             <div class="staff-avatar">
-              <div class="avatar-circle">임</div>
+              <img src="임다은사원님.jpg" class="profile-photo" alt="임다은 사원원">
             </div>
             <div class="staff-info">
               <h3 class="staff-name">임다은 매니저</h3>
