--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section class="section-block">
         <h2 class="section-title">판매 제품 소개</h2>
         <p class="section-subtitle">
-          인기 상품을 좌우로 넘기며 살펴보세요. 카드 클릭 시 네이버 블로그로 이동합니다.
+          인기 상품을 좌우로 넘기며 살펴보세요.<br>카드 클릭 시 네이버 블로그로 이동합니다.
         </p>
 
         <div class="carousel">
