--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="top-bar-right">
       <a href="tel:01034391816" class="btn primary-btn small">
-        불편사항 문의
+        불편사항 문의<br>(점장 연락)
       </a>
     </div>
   </header>
