--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <span class="shop-name-line2">유성직영점</span>
     </div>
     <div class="top-bar-right">
-      <a href="tel:01034391816" class="btn.small">
+      <a href="tel:01034391816" class="btn primary-btn.small">
         불편사항 문의<br>(점장 연락)
       </a>
     </div>
