--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section class="section-block">
         <h2 class="section-title">이 달의 소식</h2>
         <p class="section-subtitle">
-          이번 달 프로모션/신제품 소식을 영상으로 확인해 보세요.
+          이번 달 프로모션/신제품 소식을<br>영상으로 확인해 보세요.
         </p>
         <div class="video-wrapper">
           <!-- 유튜브 등 영상 링크로 src만 교체해서 사용하세요 -->
@@ -81,7 +81,7 @@
                    style="background-image: url('점프4.png');">
               </div>
               <div class="product-info">
-                <h3 class="product-title">[점프4 0원!!]<br>키즈&실버 전용폰, 무료로 개통하자!</h3>
+                <h3 class="product-title">[점프4 0원!!]<br>키즈&실버 전용폰,<br>무료로 개통하자!</h3>
               </div>
             </a>
 
@@ -93,7 +93,7 @@
                    style="background-image: url('유성.png');">
               </div>
               <div class="product-info">
-                <h3 class="product-title">[매장홍보]<br>왜 KT플라자 유성점이 좋을까요?</h3>
+                <h3 class="product-title">[매장홍보]<br>왜 KT플라자 유성점을<br>선택하셔야 할까요?</h3>
               </div>
             </a>
           </div>
