--- a/index.html
+++ b/index.html
@@ -85,10 +85,23 @@
               </div>
             </a>
 
-            <a href="https://blog.naver.com/yc20508/224079732122"
+            <a href="https://blog.naver.com/yc20508/224081145498"
                target="_blank"
                class="product-card"
                data-index="2">
+              <div class="product-thumbnail"
+                   style="background-image: url('유성.png');">
+              </div>
+              <div class="product-info">
+                <h3 class="product-title">[맘편안폰S]<br>어르신을 위한 No.1 휴대폰<br>핵심기능 총정! </h3>
+              </div>
+            </a>
+            
+          </div>
+            <a href="https://blog.naver.com/yc20508/224079732122"
+               target="_blank"
+               class="product-card"
+               data-index="3">
               <div class="product-thumbnail"
                    style="background-image: url('유성.png');">
               </div>
