--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                class="product-card"
                data-index="2">
               <div class="product-thumbnail"
-                   style="background-image: url('유성.png');">
+                   style="background-image: url('맘편안폰.png');">
               </div>
               <div class="product-info">
-                <h3 class="product-title">[맘편안폰S]<br>어르신을 위한 No.1 휴대폰<br>핵심기능 총정! </h3>
+                <h3 class="product-title">[맘편안폰S]<br>어르신을 위한 No.1 휴대폰<br>핵심기능 총정리! </h3>
               </div>
             </a>
             
