--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="style.css">
   <!-- PWA manifest & icons -->
   <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icons/kt-icon-192.png">
-  <link rel="apple-touch-icon" href="icons/kt-icon-192.png">
+  <link rel="icon" href="kt-icon-192.png">
+  <link rel="apple-touch-icon" href="kt-icon-192.png">
   <meta name="theme-color" content="#25a25a">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
