--- a/index.html
+++ b/index.html
@@ -52,13 +52,16 @@
 
       <!-- 매장 단체사진 & 소개 -->
       <section class="section-block">
-        <h2 class="section-title">반갑습니다! KT플라자 유성점입니다.</h2>
+        <h2 class="section-title"><p style="font-size=20px;">반갑습니다!</p> KT플라자 유성점입니다.</h2>
         <div class="group-photo-wrapper">
           <img src="단체사진.jpg" alt="KT플라자 유성점 단체사진" class="group-photo">
         </div>
         <p class="section-subtitle">
-          <br>고객님에게 최상의 서비스를 제공하기 위해<br><br>상품 공부를 게을리하지 않고,<br>직원 서로가 서로를 도와가며 일하는<br>최고의 팀워크를 자랑하는 유성직영점입니다.<br><br>
-          천천히 둘러보시고, 궁금한 점 생기면 연락주세요!
+          <br><b>고객님에게 최상의 서비스를 제공하기 위해</b>
+          <br><br>상품 공부를 게을리하지 않고,
+          <br>직원 서로가 서로를 도와가며 일하는
+          <br>최고의 팀워크를 자랑하는 유성직영점입니다.<br><br>
+          <b>천천히 둘러보시고, 궁금한 점 생기면 연락주세요!</b>
         </p>
 
       </section>
