--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <!-- 매장 단체사진 & 소개 -->
       <section class="section-block">
-        <h2 class="section-title"><p style="font-size:30px;">반갑습니다!</p> KT플라자 유성점입니다.</h2>
+        <h2 class="section-title"><p style="font-size:30px; line-height:1.2;">반갑습니다!</p> KT플라자 유성점입니다.</h2>
         <div class="group-photo-wrapper">
           <img src="단체사진.jpg" alt="KT플라자 유성점 단체사진" class="group-photo">
         </div>
