--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </div>
           <div class="staff-info">
             <h3 class="staff-name">임다은 매니저</h3>
-            <p class="staff-desc">애플 서비스센터 출신,<br>문제가 생기면 저를 찾아주주세요! specialist</p>
+            <p class="staff-desc">애플 서비스센터 출신,<br>곤란한 문제가 생기셨다면<br>저를 찾아주세요!</p>
             <span class="staff-link-text">프로필 보기 →</span>
           </div>
         </a>
