--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
     <!-- 2) 객관식 퀴즈 -->
     <div class="popup-content">
       <p class="popup-question">
-        Q. 이번 반짝 이벤트의 진행 기간은 언제까지일까요?
+        Q. 바쁘신 고객을 위한, 유성점의 맞춤 서비스는 무엇일까요?
       </p>
 
       <div class="popup-options">
         <label class="popup-option">
           <input type="radio" name="event-answer" value="A">
-          <span>① 이번 주 일요일까지</span>
+          <span>① 빠른 전화받기 서비스</span>
         </label>
         <label class="popup-option">
           <input type="radio" name="event-answer" value="B">
-          <span>② 이번 달 말일까지</span>
+          <span>② 방문판매 서비스</span>
         </label>
         <label class="popup-option">
           <input type="radio" name="event-answer" value="C">
-          <span>③ 내년 설 연휴까지</span>
+          <span>③ 공휴일 매장운영 서비스</span>
         </label>
       </div>
 
@@ -64,7 +64,7 @@
     <div class="popup-content">
       <p class="popup-title">🎉 정답입니다!</p>
       <p class="popup-text">
-        매장 방문 시 본 팝업 화면을 직원에게 보여주세요.
+        매장 방문 시 본 팝업 화면을 직원에게 보여주세요.<bp>본 팝업은 1회만 노출되니 지금 바로 캡쳐해주세요!
       </p>
 
       <button class="btn secondary-btn wide" data-popup-close="event-correct-popup">
@@ -107,7 +107,7 @@
 
 
     <!-- ▣▣▣ Tap 1. 상품/혜택 소개 ▣▣▣ -->
-    <section id="tab-products" class="tab-content active" aria-label="매장/상품품 소개">
+    <section id="tab-products" class="tab-content active" aria-label="매장/상품 소개">
 
       <!-- 매장 단체사진 & 소개 -->
       <section class="section-block">
