--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="popup-content">
       <p class="popup-title">🎉 정답입니다!</p>
       <p class="popup-text">
-        매장 방문 시 본 팝업 화면을 직원에게 보여주세요.<bp>본 팝업은 1회만 노출되니 지금 바로 캡쳐해주세요!
+        매장 방문 시 본 팝업 화면을 직원에게 보여주세요.<br>본 팝업은 1회만 노출되니 지금 바로 캡쳐해주세요!
       </p>
 
       <button class="btn secondary-btn wide" data-popup-close="event-correct-popup">
