--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </section>
       <!-- 이 달의 소식 -->
       <section class="section-block">
-        <h2 class="section-title">회사 홍보형상>회사</h2>
+        <h2 class="section-title">회사 홍보영상</h2>
         <p class="section-subtitle">
           우리 회사의 홍보영상입니다!<br>재미로 봐주세요 :)
         </p>
