--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           <article class="promoCard">
             <a class="promoCard__link" href="https://blog.naver.com/yc20508/224086303332" target="_blank" rel="noopener">
               <div class="promoCard__media">
-                <img src="assets/promo/promo2.jpg" alt="홍보물 2 썸네일" loading="lazy" />
+                <img src="assets/promo/promo2.png" alt="홍보물 2 썸네일" loading="lazy" />
                 <span class="promoBadge">BLOG</span>
               </div>
       
@@ -281,7 +281,7 @@
           <article class="promoCard">
             <a class="promoCard__link" href="https://blog.naver.com/yc20508/224079732122" target="_blank" rel="noopener">
               <div class="promoCard__media">
-                <img src="assets/promo/promo3.jpg" alt="홍보물 3 썸네일" loading="lazy" />
+                <img src="assets/promo/promo3.png" alt="홍보물 3 썸네일" loading="lazy" />
                 <span class="promoBadge">BLOG</span>
               </div>
       
