--- a/index.html
+++ b/index.html
@@ -202,21 +202,21 @@
       <div class="section">
         <div class="section__head">
           <h2>KT Plaza 홍보영상</h2>
-          <p class="section__desc">모르시면 손해봅니다!<br>KT에서 제공하는 소식을 동영상으로 만나보세요.</p>
+          <p class="section__desc">우리 회사의 홍보 영상입니다!<br>재미있게 시청해주세요~</p>
         </div>
       
         <a class="clipCard" target="_blank" rel="noopener"
-           href="https://m.naver.com/shorts/?mediaId=F6567E2F212E021108671BC3E08F6DBD2B83&serviceType=MOMENT&blogId=kt_mannamro&docNo=12753335">
+           href="https://youtube.com/embed/SkzZH_pqx2g?si=7PbXxi5nR1E32Ca1">
           <div class="clipCard__thumb">
             <!-- 썸네일은 ① 직접 만든 이미지 업로드(권장) 또는 ② 이미지 URL -->
-            <img src="assets/news-thumb.jpg" alt="이 달의 소식 클립 썸네일" />
+            <img src="assets/news-thumb.png" alt="이 달의 소식 클립 썸네일" />
             <div class="clipCard__badge">Youtube Shorts</div>
             <div class="clipCard__play">▶</div>
           </div>
       
           <div class="clipCard__body">
-            <div class="clipCard__title">내가 KT플라자에서 이뤄낸 것들..!</div>
-            <div class="clipCard__sub">네이버 클립 바로 재생하기</div>
+            <div class="clipCard__title">호갱이라는 단어, 이제는 없어져야 합니다.</div>
+            <div class="clipCard__sub">촬영: KT플라자 관저중로점</div>
           </div>
         </a>
       </div>
