--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             ></iframe>
           </div>
       
-          <button type="button" class="ytInline__close js-close-video">닫기</button>
+          <button type="button" class="ytInline__close js-close-inline-video">닫기</button>
         </div>
       </div>
 
