--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
   <!-- Floating Naver Reservation Button -->
   <a class="fabNaver" data-cta="naver_reserve" data-card="floating"
-     href="https://m.booking.naver.com/booking/5/bizes/957817?theme=place&entry=pll&lang=ko&area=pll"
+     href="https://m.place.naver.com/place/1546887652/home?entry=pll&bk_query=kt%ED%94%8C%EB%9D%BC%EC%9E%90%20%EC%9C%A0%EC%84%B1%EC%A0%90"
      target="_blank" rel="noopener" aria-label="네이버 예약 바로가기">
     <span class="fabNaver__logo" aria-hidden="true">N</span>
     <span class="fabNaver__text">예약</span>
